<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/my_account" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/maps" />
        <item
            android:id="@+id/nav_halls"
            android:icon="@drawable/weddingphoto"
            android:title="@string/halls" />
        <item
            android:id="@+id/nav_rests"
            android:icon="@drawable/hotel"
            android:title="@string/rests" />
        <item
            android:id="@+id/nav_service"
            android:icon="@drawable/baseline_local_offer_black_24"
            android:title="@string/the_services" />
        <item
            android:id="@+id/nav_reserveaton"
            android:icon="@drawable/reservations"
            android:title="@string/my_reservations" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_favorite"
            android:title="@string/fav" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_action_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/baseline_phone_black_18"
                android:title="@string/contact" />
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_exit_to_app"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
